fix: change connection of favicon

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="./assets/images/Userinterface-12-512.icogit">
+    <link rel="icon" href="./assets/images/Userinterface-12-512.ico">
     <title>CSS Bayan</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <div class="accordion__item">
                     <input type="radio" id="accordion-button-1" name="accordion-button" checked>
                     <label class="accordion__label" for="accordion-button-1">
-                        <div class="accordion__title">
+                        <div class="accordion__item-title">
                             <h2>Count to ten</h2>
                             <span class="plus">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -40,7 +40,7 @@
                 <div class="accordion__item">
                     <input type="radio" id="accordion-button-2" name="accordion-button">
                     <label class="accordion__label" for="accordion-button-2">
-                        <div class="accordion__title">
+                        <div class="accordion__item-title">
                             <h2>Unfinished work</h2>
                             <span class="plus">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -61,7 +61,7 @@
                 <div class="accordion__item">
                     <input type="radio" id="accordion-button-3" name="accordion-button">
                     <label class="accordion__label" for="accordion-button-3">
-                        <div class="accordion__title">
+                        <div class="accordion__item-title">
                             <h2>Refactoring</h2>
                             <span class="plus">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -82,7 +82,7 @@
                 <div class="accordion__item">
                     <input type="radio" id="accordion-button-4" name="accordion-button">
                     <label class="accordion__label" for="accordion-button-4">
-                        <div class="accordion__title">
+                        <div class="accordion__item-title">
                             <h2>Perfect date</h2>
                             <span class="plus">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -103,7 +103,7 @@
                 <div class="accordion__item">
                     <input type="radio" id="accordion-button-5" name="accordion-button">
                     <label class="accordion__label" for="accordion-button-5">
-                        <div class="accordion__title">
+                        <div class="accordion__item-title">
                             <h2>Good night!</h2>
                             <span class="plus">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
